--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <!-- Page Links with Glowing Effect -->
         <div class="page-links">
             <a href="about.html">About</a>
-            <a href="pyqs.html">Previous Year Questions</a>
+            <a href="pyqs.html">PYQs</a>
             <a href="skills.html">Skills</a>
             <a href="gallery.html">Gallery</a>
             <a href="job.html">Job/Intership</a>
