--- a/gallery.html
+++ b/gallery.html
@@ -95,31 +95,31 @@
 
             <!-- Video 2 -->
             <video controls>
-                <source src="Video 2.mp4" type="video/mp4">
+                <source src="video 2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
 
             <!-- Video 3 -->
             <video controls>
-                <source src="Video 3.mp4" type="video/mp4">
+                <source src="video 3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
 
             <!-- Video 4 -->
             <video controls>
-                <source src="Video 4.mp4" type="video/mp4">
+                <source src="video 4.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
 
             <!-- Video 5 -->
             <video controls>
-                <source src="Video 5.mp4" type="video/mp4">
+                <source src="video 5.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
 
             <!-- Video 6 (Duplicate Video 5) -->
             <video controls>
-                <source src="Video 5.mp4" type="video/mp4">
+                <source src="video 6.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
