--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
 
     <!-- Main Content -->
     <div class="content">
-        <h1>MGKVP EDUCATION ONLINE</h1>
-        <h2>Providing the Digital Shift to Technology Learning—All the Journalism Tools in One Place.</h2>
-        <button class="glowing-button" onclick="redirectToJoin()">Click Below For Notes</button>
+        <h1>EDUCATION SIMPLIFIED ONLINE</h1>
+        <h2>Providing the Digital Shift to Technology Learning—All the Education Tools in One Place.</h2>
+        <button class="glowing-button" onclick="redirectToJoin()">Click Here For Notes</button>
 
         <!-- Page Links with Glowing Effect -->
         <div class="page-links">
@@ -240,7 +240,7 @@
     <!-- Footer -->
     <div class="footer">
  <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==" target="_blank" style="color: #ffffff; text-decoration: none;">
-            Created by: Uzair Ahmed @2024, B.A.(Hons) Mass Communication Student: (it's not a MGKVP Official Website)
+            Created by: Uzair Ahmed @2024, B.A.(Hons) Mass Communication Student: (This Website does not belong to any government institution, it is owned by a private entity)
     </div>
 
     <script>
