--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
 
     <!-- Main Content -->
     <div class="content">
-        <h1>EDUCATION SIMPLIFIED ONLINE</h1>
+        <h1>UZAIR AHMED EDUCATION</h1>
         <h2>Providing the Digital Shift to Technology Learning—All the Education Tools in One Place.</h2>
         <button class="glowing-button" onclick="redirectToJoin()">Click Here For Notes</button>
 
         <!-- Page Links with Glowing Effect -->
         <div class="page-links">
             <a href="about.html">About</a>
-            <a href="https://www.mgkvponline.com/">PYQs</a>
+            <a href="tools.html">Tools</a>
             <a href="skills.html">Skills</a>
             <a href="gallery.html">Gallery</a>
             <a href="job.html">Job/Intership</a>
