--- a/index.html
+++ b/index.html
@@ -212,19 +212,19 @@
 
     <!-- Sidebar Menu -->
     <div class="sidebar-menu" id="sidebarMenu">
-        <a href="https://wa.link/4jrun4" target="_blank">Contact the Developer</a>
-        <a href="https://youtube.com/@uzairentertainment?si=z_WBJrxYp0miibon" target="_blank">SUBSCRIBE Uzair Entertainment</a>
-        <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==" target="_blank">Talk to Developer on Instagram</a>
-        <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" target="_blank">Join the WhatsApp Group</a>
-        <a href="https://uzairb2b.blogspot.com" target="_blank">Uzair B2B Services</a>
-        <a href="https://educationsimplified.github.io/internship/" target="_blank">Internships</a>
-        <a href="https://educationsimplified.github.io/skills/" target="_blank">Skilled Courses</a>
+        <a href="https://educationsimplified.github.io/UzairAhmed/">MY DIGITAL RESUME</a>
+        <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==">CONTACT THE DEVELOPER</a>
+        <a href="https://www.instagram.com/uzair_entertainment?igsh=MWR4b2k0aGYyYWt5dQ==" target="_blank">DIGITAL MARKETING SERVICES</a>
+        <a href="https://uzairb2b.blogspot.com" target="_blank">WEB DEVELOPMENT SERVICES</a> 
+        <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" target="_blank">JOIN THE WHATSAPP GROUP</a>
+        <a href="https://educationsimplified.github.io/internship/" target="_blank">INTERNSHIP</a>
+        <a href="https://educationsimplified.github.io/skills/" target="_blank">SKILLED COURSES</a>
     </div>
 
     <!-- Main Content -->
     <div class="content">
-        <h1>UZAIR AHMED EDUCATION</h1>
-        <h2>Providing the Digital Shift to Technology Learning—All the Education Tools in One Place.</h2>
+        <h1>EDUCATION SIMPLIFIED By UZAIR</h1>
+        <h2>.</h2>
         <button class="glowing-button" onclick="redirectToJoin()">Click Here For Notes</button>
 
         <!-- Page Links with Glowing Effect -->
