--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
 
     <!-- Main Content -->
     <div class="content">
-        <h1>EDUCATION SIMPLIFIED By UZAIR</h1>
-        <h2>.</h2>
+       <h1>EDUCATION SIMPLIFIED BY UZAIR</h1>
+       <h2>This website is for journalism students and tech enthusiasts. We provide notes for journalism students along with advanced tech, digital marketing, and web development services.</h2>
+
         <button class="glowing-button" onclick="redirectToJoin()">Click Here For Notes</button>
 
         <!-- Page Links with Glowing Effect -->
