--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20230706/pngtree-3d-rendering-background-of-live-news-concept-in-journalism-image_3818400.jpg');
+            background-image: url('https://img.freepik.com/free-photo/rendering-abstract-futuristic-background-with-glowing-neon-blue-orange-lights_181624-19807.jpg');
             background-size: cover;
             background-position: center;
             height: 100vh;
