--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <!-- Main Content -->
     <div class="content">
        <h1>EDUCATION SIMPLIFIED BY UZAIR</h1>
-       <h2>This website is for journalism students and tech enthusiasts. We provide notes for journalism students along with advanced tech, digital marketing, and web development services.</h2>
+       <h2>Providing the Digital Shift to Technology Learning—Tools, Apply for Job and Internship and Study from Notes in One Place.</h2>
 
         <button class="glowing-button" onclick="redirectToJoin()">Click Here For Notes</button>
 
