--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <body>
    <!-- Top Right Logo -->
     <div class="header" onclick="spinLogoAndRedirect()">
-        <img src="EDUCATION SIMPLIFIED INDIA.png" alt="EDUCATION SIMPLIFIED Logo">
+        <img src="UZAIR B2B.jpg" alt="uzair b2b services Logo">
     </div>
 
  <!-- Sidebar Button on Left -->
@@ -266,13 +266,13 @@
             logo.style.transform = 'rotate(360deg)';
 
             setTimeout(function() {
-                window.location.href = 'https://educationsimplified.github.io/india';
+                window.location.href = 'https://www.instagram.com/uzairb2bservices?igsh=NDlzcHA5b3Z2a2Vy';
                 logo.style.transform = 'rotate(0deg)';
             }, 600); // Matches the transition duration
         }
 // Redirect to Join Link
         function redirectToJoin() {
-            window.location.href = 'https://educationsimplified.github.io/india';
+            window.location.href = 'https://www.instagram.com/uzairb2bservices?igsh=NDlzcHA5b3Z2a2Vy';
         }
 
         function redirectToJoin() {
