--- a/tools.html
+++ b/tools.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <header>
-        <img src="education-simplified.png" alt="Education Simplified Logo" class="logo">
+        <img src="EDUCATION SIMPLIFIED INDIA.png" alt="Education Simplified Logo" class="logo">
         <h1>Business & Advertising Tools</h1>
         <h2>Created by Uzair - For Digital Advertising</h2>
         <p class="tagline">Your Gateway to Digital Excellence.</p>
