--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <!-- Footer -->
     <div class="footer">
  <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==" target="_blank" style="color: #ffffff; text-decoration: none;">
-            Created by: Uzair Ahmed @2024, B.A.(Hons) Mass Communication Student: (This Website does not belong to any government institution, it is owned by a private entity)
+            Developed by: Uzair Ahmed @2024, B.A.(Hons) Mass Communication Student
     </div>
 
     <script>
