--- a/index.html
+++ b/index.html
@@ -266,13 +266,13 @@
             logo.style.transform = 'rotate(360deg)';
 
             setTimeout(function() {
-                window.location.href = 'https://www.instagram.com/uzairb2bservices?igsh=NDlzcHA5b3Z2a2Vy';
+                window.location.href = 'https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==';
                 logo.style.transform = 'rotate(0deg)';
             }, 600); // Matches the transition duration
         }
 // Redirect to Join Link
         function redirectToJoin() {
-            window.location.href = 'https://www.instagram.com/uzairb2bservices?igsh=NDlzcHA5b3Z2a2Vy';
+            window.location.href = 'https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==';
         }
 
         function redirectToJoin() {
