--- a/skills.html
+++ b/skills.html
@@ -1,17 +1,14 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Techogies: Get a Chance to Earn a Certificate - HTML Test & Practice">
+    <meta property="og:title" content="https://www.instagram.com/uzairvibes/profilecard/?igsh=MXEwczdtd290aXl0Zw==: Get a Chance to Earn a Certificate - HTML Test & Practice">
     <meta property="og:description" content="Complete the HTML test and practice to earn your certificate. Watch the introductory video before proceeding.">
-    <meta property="og:image" content="TECHOGIES.png">
-    <meta property="og:url" content="https://www.techogies.com/">
-    <link rel="icon" href="TECHOGIES.png">
-    <title>Techogies: Get a Chance to Earn a Certificate</title>
+    <meta property="og:image" content="EDUCATION SIMPLIFIED INDIA.png">
+    <meta property="og:url" content="https://www.instagram.com/uzairvibes/profilecard/?igsh=MXEwczdtd290aXl0Zw==">
+    <link rel="icon" href="EDUCATION SIMPLIFIED INDIA.png">
+    <title>EDUCATION SIMPLIFIED INDIA: Get a Chance to Earn a Certificate</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -144,13 +141,13 @@
 <body>
 
 <header>
-    <a href="https://www.techogies.com/">
-        <img src="TECHOGIES.png" alt="Techogies Logo">
+    <a href="https://www.instagram.com/uzairvibes/profilecard/?igsh=MXEwczdtd290aXl0Zw==">
+        <img src="EDUCATION SIMPLIFIED INDIA.png" alt="EDUCATION SIMPLIFIED INDIA Logo">
     </a>
 </header>
 
 <div class="container">
-    <h1>Welcome to Techogies: Earn Your Certificate</h1>
+    <h1>Welcome to EDUCATION SIMPLIFIED INDIA: Earn Your Certificate</h1>
 
     <div class="video-container">
         <h2>Watch the Video Before You Start</h2>
@@ -187,7 +184,7 @@
 
 <footer>
     <p>Made with ❤️ by <a href="https://www.instagram.com/uzairvibes/?igsh=MXEwczdtd290aXl0Zw%3D%3D" target="_blank">Uzair Sir</a></p>
-    <p>Visit our website: <a href="https://www.techogies.com/" target="_blank">www.techogies.com</a></p>
+    <p>Educator at Techogies, Visit our website: <a href="https://www.techogies.com/" target="_blank">www.techogies.com</a></p>
 </footer>
 
 </body>
