--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     <!-- Main Content -->
     <div class="content">
-       <h1>Journalism X Uzair</h1>
+       <h1>Journalism Padho!</h1>
        <h2>Providing the Digital Shift to Technology Learning—Tools, Apply for Job and Internship and Study from Notes in One Place.</h2>
 
         <button class="glowing-button" onclick="redirectToJoin()">Click Here For Notes</button>
