--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 <body>
     <!-- Logo Section -->
     <div class="header" onclick="spinLogoAndRedirect()">
-        <img src="EDUCATION SIMPLIFIED INDIA.png" alt="EDUCATION SIMPLIFIED Logo">
+        <img src="UZAIR B2B.jpg" alt="UZAIR B2B.jpg">
     </div>
 
     <!-- Main Content -->
