--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
             <a href="tools.html">Tools</a>
             <a href="skills.html">Skills</a>
             <a href="gallery.html">Gallery</a>
+            <a href="https://onlinecybercafe.github.io/varanasi/">Online CyberCafe</a>
             <a href="job.html">Job/Intership</a>
         </div>
     </div>
