--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
     <div class="sidebar-menu" id="sidebarMenu">
         <a href="https://educationsimplified.github.io/UzairAhmed/">MY DIGITAL RESUME</a>
         <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==">CONTACT THE DEVELOPER</a>
-        <a href="https://www.instagram.com/uzair_entertainment?igsh=MWR4b2k0aGYyYWt5dQ==" target="_blank">DIGITAL MARKETING SERVICES</a>
-        <a href="https://uzairb2b.blogspot.com" target="_blank">WEB DEVELOPMENT SERVICES</a> 
-        <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" target="_blank">JOIN THE WHATSAPP GROUP</a>
-        <a href="https://educationsimplified.github.io/internship/" target="_blank">INTERNSHIP</a>
+        <a href="https://onlinecybercafe.github.io/varanasi/" target="_blank">ONLINE CYBER CAFE</a>
+        <a href="https://www.instagram.com/uzairb2b?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">UZAIR B2B SERVICES</a> 
+        <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" target="_blank">JOIN OUR WHATSAPP GROUP</a>
+        <a href="https://educationsimplified.github.io/internship/" target="_blank">INTERNSHIP PORTAL</a>
         <a href="https://educationsimplified.github.io/skills/" target="_blank">SKILLED COURSES</a>
     </div>
 
@@ -234,8 +234,7 @@
             <a href="tools.html">Tools</a>
             <a href="skills.html">Skills</a>
             <a href="gallery.html">Gallery</a>
-            <a href="https://onlinecybercafe.github.io/varanasi/">Online CyberCafe</a>
-            <a href="job.html">Job/Intership</a>
+            <a href="job.html">Intership Portal</a>
         </div>
     </div>
 
