--- a/skills.html
+++ b/skills.html
@@ -3,189 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="https://www.instagram.com/uzairvibes/profilecard/?igsh=MXEwczdtd290aXl0Zw==: Get a Chance to Earn a Certificate - HTML Test & Practice">
-    <meta property="og:description" content="Complete the HTML test and practice to earn your certificate. Watch the introductory video before proceeding.">
-    <meta property="og:image" content="EDUCATION SIMPLIFIED INDIA.png">
-    <meta property="og:url" content="https://www.instagram.com/uzairvibes/profilecard/?igsh=MXEwczdtd290aXl0Zw==">
-    <link rel="icon" href="EDUCATION SIMPLIFIED INDIA.png">
-    <title>EDUCATION SIMPLIFIED INDIA: Get a Chance to Earn a Certificate</title>
+    <title>Learn Skills and Get a Job with Uzair Sir</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffffff;
-            color: #333;
+            background-color: #000;
+            color: #fff;
         }
 
         header {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #3e206d;
+            text-align: center;
             padding: 20px;
-        }
-
-        header img {
-            width: 60px;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-
-        header img:hover {
-            transform: rotate(360deg);
-        }
-
-        .container {
-            padding: 40px;
-            max-width: 1000px;
-            margin: 0 auto;
-            background-color: #fff;
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-        }
-
-        h1 {
-            font-size: 2.8rem;
-            color: #3e206d;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .video-container {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        iframe {
-            width: 100%;
-            height: 500px;
-            border: none;
-            border-radius: 8px;
-        }
-
-        .cta-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 30px;
-        }
-
-        .cta-button {
-            padding: 15px 30px;
-            background-color: #FF6D00;
+            background: linear-gradient(90deg, #FF7300, #000);
             color: #fff;
-            border: none;
-            border-radius: 8px;
-            font-size: 1.2rem;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.4s ease, box-shadow 0.4s ease;
-            position: relative;
         }
 
-        .cta-button:after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 8px;
-            border: 2px solid #FF6D00;
-            transition: transform 0.3s ease;
-            transform: scale(1.1);
-            opacity: 0;
+        header h1 {
+            text-shadow: 0 0 15px #FF7300;
         }
 
-        .cta-button:hover:after {
-            transform: scale(1);
-            opacity: 1;
+        .course {
+            border: 2px solid #FF7300;
+            border-radius: 10px;
+            margin: 20px;
+            padding: 15px;
+            background-color: #111;
+            box-shadow: 0 0 15px #FF7300;
         }
 
-        .cta-button:hover {
-            background-color: #E65100;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+        .course h2 {
+            color: #FF7300;
+        }
+
+        .course a {
+            color: #fff;
+            text-decoration: none;
+            background-color: #FF7300;
+            padding: 8px 15px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px #FF7300;
+            transition: 0.3s;
+        }
+
+        .course a:hover {
+            background-color: #000;
+            color: #FF7300;
+            box-shadow: 0 0 20px #FF7300;
+        }
+
+        .description {
+            margin: 20px;
+            padding: 15px;
+            border: 2px solid #FF7300;
+            border-radius: 10px;
+            background-color: #111;
+            box-shadow: 0 0 15px #FF7300;
         }
 
         footer {
-            background-color: #3e206d;
-            color: white;
-            padding: 20px;
             text-align: center;
-            border-top: 4px solid #FF6D00;
-        }
-
-        footer a {
-            color: #FF6D00;
-            font-weight: bold;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 768px) {
-            .cta-buttons {
-                flex-direction: column;
-                gap: 15px;
-            }
-
-            iframe {
-                height: 300px;
-            }
+            padding: 10px;
+            background-color: #111;
+            color: #FF7300;
+            border-top: 2px solid #FF7300;
         }
     </style>
 </head>
 <body>
+    <header>
+        <h1>Learn Skills and Get a Job with Uzair Sir</h1>
+        <p>Your journey to success starts here!</p>
+    </header>
 
-<header>
-    <a href="https://www.instagram.com/uzairvibes/profilecard/?igsh=MXEwczdtd290aXl0Zw==">
-        <img src="EDUCATION SIMPLIFIED INDIA.png" alt="EDUCATION SIMPLIFIED INDIA Logo">
-    </a>
-</header>
-
-<div class="container">
-    <h1>Welcome to EDUCATION SIMPLIFIED INDIA: Earn Your Certificate</h1>
-
-    <div class="video-container">
-        <h2>Watch the Video Before You Start</h2>
-        <iframe src="https://www.youtube.com/embed/mDwXhdtr3Uw?autoplay=1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <div class="description">
+        <p>Discover your potential with expert-led courses created for students in fields like BA Hons Mass Communication, BJMC, MA Mass Communication, and MJMC. These programs focus on practical learning to improve your skills and prepare you for industry jobs.</p>
     </div>
 
-    <div class="cta-buttons">
-
-           <a href="https://forms.gle/Uh2QEntufBStDYC46">
-            <button class="cta-button">CLICK To Join FREE WONDERFULL SESSIONS</button>
-        </a>
-        
-        <a href="https://youtube.com/playlist?list=PLNlNWbChYIWt7pQcOGsRMGDxu0-MBmxOY&si=5XK0OtoewlirT_2h">
-            <button class="cta-button">HTML OG SERIES Playlist</button>
-        </a>
-
-        <a href="https://drive.google.com/file/d/1HAmjvmOP7SqYtR5DMtf6hIYMyU6th4d4/view?usp=sharing">
-            <button class="cta-button">Download the Study Material</button>
-        </a>
-
-
-        <a href="https://presenter.jivrus.com/p/1K8psRr3MdhVPYyYWiVLFNRQdvFkLsXHNZQV1ZD8hTV0">
-            <button class="cta-button">Take the 1-Hour Test</button>
-        </a>
-        <a href="mcq.html">
-            <button class="cta-button">Practice MCQs</button>
-        </a>
-        <a href="fillintheblank.html">
-            <button class="cta-button">Fill in the Blank</button>
-        </a>
-        
+    <div class="description">
+        <p>अपने कौशल को बढ़ाएं हमारे विशेषज्ञों द्वारा बनाए गए कोर्स के साथ। ये कोर्स बीए ऑनर्स मास कम्युनिकेशन, बीजेएमसी, एमए मास कम्युनिकेशन, और एमजेएमसी जैसे छात्रों के लिए हैं। ये प्रोग्राम आपको प्रैक्टिकल नॉलेज देकर नौकरी के लिए तैयार करते हैं।</p>
     </div>
-</div>
 
-<footer>
-    <p>Made with ❤️ by <a href="https://www.instagram.com/uzairvibes/?igsh=MXEwczdtd290aXl0Zw%3D%3D" target="_blank">Uzair Sir</a></p>
-    <p>Educator at Techogies, Visit our website: <a href="https://www.techogies.com/" target="_blank">www.techogies.com</a></p>
-</footer>
+    <div class="course">
+        <h2>Full HTML Course: Learn and Earn Certificate for Free</h2>
+        <p>Enhance your resume by learning HTML from scratch and earning a free certificate.</p>
+        <a href="https://techogies.github.io/htmlquestions/" target="_blank">Start Now</a>
+    </div>
+    <div class="course">
+        <h2>Learn Web Development Online (25% OFF for MGKVP Students)</h2>
+        <p>Master web development skills to build modern, responsive websites and enhance your job prospects. Ideal for BA Hons Mass Communication, BJMC, MA Mass Communication, and MJMC students.</p>
+        <a href="https://techogies.com/course_details.php?cid=TlE9PQ==" target="_blank">Enroll Now</a>
+    </div>
 
+    <div class="course">
+        <h2>Learn Java and JavaFX (25% OFF for MGKVP Students)</h2>
+        <p>Learn Java programming and JavaFX to create desktop and web applications. A perfect skillset for communication students looking to diversify their expertise.</p>
+        <a href="https://techogies.com/course_details.php?cid=TVRNPQ==" target="_blank">Enroll Now</a>
+    </div>
+
+    <div class="course">
+        <h2>Learn Web Development Offline (25% OFF for MGKVP Students)</h2>
+        <p>Get hands-on training with offline web development courses. Designed to give you real-world experience, especially useful for communication and media professionals.</p>
+        <a href="https://techogies.com/course_details.php?cid=TVRJPQ==" target="_blank">Enroll Now</a>
+    </div>
+
+  
+
+    <footer>
+        <p>Developed by Uzair B2B Services</p>
+    </footer>
 </body>
 </html>
