--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <a href="https://www.instagram.com/uzairb2b?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">UZAIR B2B SERVICES</a> 
         <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" target="_blank">JOIN OUR WHATSAPP GROUP</a>
         <a href="https://educationsimplified.github.io/internship/" target="_blank">INTERNSHIP PORTAL</a>
-        <a href="https://educationsimplified.github.io/skills/" target="_blank">SKILLED COURSES</a>
+        <a href="https://educationsimplified.github.io/skills/" target="_blank">LEARN SKILLS</a>
     </div>
 
     <!-- Main Content -->
