--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
 
         <!-- Page Links with Glowing Effect -->
         <div class="page-links">
-            <a href="about.html">About</a>
-            <a href="tools.html">Tools</a>
-            <a href="skills.html">Skills</a>
-            <a href="gallery.html">Gallery</a>
+            <a href="about.html">About Me</a>
+            <a href="tools.html">Use Tools</a>
+            <a href="skills.html">Learn Skills</a>
+            <a href="gallery.html">See Gallery</a>
             <a href="job.html">Intership Portal</a>
         </div>
     </div>
