--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <body>
    <!-- Top Right Logo -->
     <div class="header" onclick="spinLogoAndRedirect()">
-        <img src="UZAIR B2B.jpg" alt="UZAIR B2B Logo">
+        <img src="20250125_115304.png" alt="UZAIR B2B Logo">
     </div>
 
  <!-- Sidebar Button on Left -->
