--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
 
         <!-- Page Links with Glowing Effect -->
         <div class="page-links">
-            <a href="about.html">About Me</a>
-            <a href="tools.html">Use Tools</a>
-            <a href="skills.html">Learn Skills</a>
-            <a href="gallery.html">See Gallery</a>
-            <a href="job.html">Intership Portal</a>
+            <a href="about.html">ABOUT</a>
+            <a href="tools.html">TOOLS</a>
+            <a href="skills.html">SKILLS</a>
+            <a href="gallery.html">GALLERY</a>
+            <a href="job.html">INTERNSHIP PORTAL</a>
         </div>
     </div>
 
