--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
             <a href="tools.html">TOOLS</a>
             <a href="skills.html">SKILLS</a>
             <a href="gallery.html">GALLERY</a>
-            <a href="job.html">INTERNSHIP PORTAL</a>
+            <a href="job.html">INTERNSHIP</a>
+            <a href="https://uzairb2b.blogspot.com/?m=1">UZAIR B2B SERVICES</a>
         </div>
     </div>
 
