--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@
 
         <!-- Page Links with Glowing Effect -->
         <div class="page-links">
-            <a href="about.html">ABOUT</a>
-            <a href="tools.html">TOOLS</a>
-            <a href="skills.html">SKILLS</a>
-            <a href="gallery.html">GALLERY</a>
-            <a href="job.html">INTERNSHIP</a>
-            <a href="https://uzairb2b.blogspot.com/?m=1">UZAIR B2B SERVICES</a>
+            <a href="about.html">About</a>
+            <a href="tools.html">Tools</a>
+            <a href="skills.html">Skills</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="job.html">Internship</a>
+            <a href="https://uzairb2b.blogspot.com/?m=1">Uzair B2B</a>
         </div>
     </div>
 
