--- a/gallery.html
+++ b/gallery.html
@@ -111,7 +111,7 @@
 <body>
     <div class="container">
         <!-- Header Section -->
-        <div class="header">Uzair2.jpg
+        <div class="header">
             <h1>Seminar on Cyber Security</h1>
             <img src="Uzair2.jpg" alt="Uzair Ahmed">
             <div class="toggle-mode-container">
