--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MGKVP Department of Journalism and Mass Communication</title>
+    <link rel="icon" href="https://image-static.collegedunia.com/public/college_data/images/appImage/25957_MGKASHI_APP.jpg?h=260&w=360&mode=crop" type="image/x-icon">
     <style>
         body {
             font-family: 'Arial', sans-serif;
