--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <a href="https://educationsimplified.github.io/UzairAhmed/">MY DIGITAL RESUME</a>
         <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==">CONTACT THE DEVELOPER</a>
         <a href="https://onlinecybercafe.github.io/varanasi/" target="_blank">ONLINE CYBER CAFE</a>
-        <a href="https://www.instagram.com/uzairb2b?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">UZAIR B2B SERVICES</a> 
+        <a href="https://uzairb2b.blogspot.com/?m=1" target="_blank">UZAIR B2B SERVICES</a> 
         <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" target="_blank">JOIN OUR WHATSAPP GROUP</a>
         <a href="https://educationsimplified.github.io/internship/" target="_blank">INTERNSHIP PORTAL</a>
         <a href="https://educationsimplified.github.io/skills/" target="_blank">LEARN SKILLS</a>
@@ -236,7 +236,6 @@
             <a href="skills.html">Skills</a>
             <a href="gallery.html">Gallery</a>
             <a href="job.html">Internship</a>
-            <a href="https://uzairb2b.blogspot.com/?m=1">Uzair B2B</a>
         </div>
     </div>
 
