--- a/gallery.html
+++ b/gallery.html
@@ -122,11 +122,11 @@
         <!-- Gallery Section -->
         <div class="gallery">
             <video controls><source src="Video 1.mp4" type="video/mp4"></video>
-            <video controls><source src="Video 2.mp4" type="video/mp4"></video>
-            <video controls><source src="Video 3.mp4" type="video/mp4"></video>
-            <video controls><source src="Video 4.mp4" type="video/mp4"></video>
-            <video controls><source src="Video 5.mp4" type="video/mp4"></video>
-            <video controls><source src="Video 6.mp4" type="video/mp4"></video>
+            <video controls><source src="video 2.mp4" type="video/mp4"></video>
+            <video controls><source src="video 3.mp4" type="video/mp4"></video>
+            <video controls><source src="video 4.mp4" type="video/mp4"></video>
+            <video controls><source src="video 5.mp4" type="video/mp4"></video>
+            <video controls><source src="video 6.mp4" type="video/mp4"></video>
         </div>
     </div>
 
