--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="mt-8 flex flex-wrap justify-center space-x-4 md:space-x-6">
             <a href="https://educationsimplified.github.io/mgkvp/about.html" class="btn btn-outline-primary rounded-full">About</a>
             <a href="https://educationsimplified.github.io/mgkvp/tools.html" class="btn btn-outline-primary rounded-full">Tools</a>
-            <a href="https://educationsimplified.github.io/mgkvp/skills.html" class="btn btn-outline-primary rounded-full">Skills</a>
+            <a href="https://uzairb2b.github.io/education" class="btn btn-outline-primary rounded-full">Skills</a>
             <a href="https://educationsimplified.github.io/mgkvp/gallery.html" class="btn btn-outline-primary rounded-full">Gallery</a>
             <a href="https://educationsimplified.github.io/mgkvp/job.html" class="btn btn-outline-primary rounded-full">Internship</a>
                        <a href="https://uzairb2b.github.io/certificate/" class="btn btn-outline-primary rounded-full">Download Certificate</a>
