--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     document.addEventListener("DOMContentLoaded", function () {
         var options = {
-            strings: ["Study Notes", "Jobs", "Learn Skills" , "Internships", "Documentary", "Services", "Online Cyber Cafe", "UZAIR B2B SERVICES" , "Hire Me For Websites" ,"Competative Exams", "PG Exams", "All The Best MGKVPIANS", "Explore Now" ],
+            strings: ["MGKVP", "B.A. Hons Mass Communication", "M.A. Hons Mass Communication", "BJMC", "MJMC", "Media Studies", "Journalism Studies", "Study Notes", "Jobs", "Learn Skills" , "Internships", "Documentary", "Services", "Online Cyber Cafe", "UZAIR B2B SERVICES" , "Hire Me For Websites" ,"Competative Exams", "PG Exams", "All The Best MGKVPIANS", "Explore Now" ],
             typeSpeed: 50,  // Typing speed in milliseconds
             backSpeed: 30,  // Backspacing speed
             backDelay: 1000, // Delay before backspacing
