--- a/index.html
+++ b/index.html
@@ -188,12 +188,6 @@
             Developed by: Uzair Ahmed @2024, B.A.(Hons) Mass Communication Student
         </a>
     </div>
-    <div>
-        <a href="https://www.hitwebcounter.com" target="_blank">
-            <img src="https://hitwebcounter.com/counter/counter.php?page=19487890&style=0027&nbdigits=9&type=page&initCount=120000" 
-                 title="Counter Widget" alt="Visit counter For Websites" border="0" />
-        </a>
- </div>
 </footer>
 
     
@@ -308,5 +302,6 @@
   
     </script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script defer src="https://static.getbutton.io/widget/bundle.js?id=U3DId" ></script>
 </body>
 </html>
