--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
             <a href="https://educationsimplified.github.io/mgkvp/gallery.html" class="btn btn-outline-primary rounded-full">Gallery</a>
             <a href="https://educationsimplified.github.io/mgkvp/job.html" class="btn btn-outline-primary rounded-full">Internship</a>
             <a href="https://uzairb2b.github.io/certificate/" class="btn btn-outline-primary rounded-full">Download Certificate</a>
-            <a href="https://uzairb2b.github.io/resume_maker/" class="btn btn-outline-primary rounded-full">Create Resume</a>
-            <a href="https://uzairb2b.github.io/Bookmark/" class="btn btn-outline-primary rounded-full">Download QR</a>
+            <a href="filepage.html" class="btn btn-outline-primary rounded-full">Create File Front Page (FREE)</a>
+            <a href="https://uzairb2b.github.io/resume_maker/" class="btn btn-outline-primary rounded-full">Create Resume (FREE)</a>
+            <a href="https://uzairb2b.github.io/Bookmark/" class="btn btn-outline-primary rounded-full">Download QR (FREE)</a>
         
         <a href="https://educationsimplified.github.io/focux_study/" class="btn btn-outline-primary rounded-full">FOCUX</a>
     </div>
