--- a/filepage.html
+++ b/filepage.html
@@ -72,13 +72,9 @@
         <label for="class" class="form-label">Year:</label>
         <input type="text" class="form-control" id="class" placeholder="e.g., 3rd Year">
       </div>
-      <div class="mb-3">
-        <label for="mother" class="form-label">Mother's Name:</label>
-        <input type="text" class="form-control" id="mother" placeholder="Enter Mother's Name">
-      </div>
       <div class="mb-4">
-        <label for="father" class="form-label">Father's Name:</label>
-        <input type="text" class="form-control" id="father" placeholder="Enter Father's Name">
+        <label for="father" class="form-label">Guardian's Name:</label>
+        <input type="text" class="form-control" id="father" placeholder="e.g. fathers name">
       </div>
       <div class="mb-4">
         <label for="submit" class="form-label">Submited to:</label>
