--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         
     <!-- Main Content -->
     <main class="text-center py-20 px-6">
-        <h1 class="text-5xl font-bold mb-4 text-blue-400">JOURNALISM WALLAH</h1>
+        <h1 class="text-5xl font-bold mb-4 text-blue-400">JOURNALISM WALLAH<br>By MGKVP Student</h1>
         <p class="text-lg mb-6">
             Digital Shift to Learning — 
             <span class="typed"></span>.
@@ -167,7 +167,7 @@
         <br>
 
          <button class="bg-blue-500 text-white py-3 px-6 rounded-full hover:bg-blue-600 transition-all shadow-lg" onclick="window.location.href='https://www.mgkvponline.com/'">
-            Click Here For Previous Year Questions
+        Previous Year Questions
         </button>
         <div class="mt-8 flex flex-wrap justify-center space-x-4 md:space-x-6">
             <a href="https://educationsimplified.github.io/mgkvp/about.html" class="btn btn-outline-primary rounded-full">About</a>
