--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     
         <button class="bg-blue-500 text-white py-3 px-6 rounded-full hover:bg-blue-600 transition-all shadow-lg" onclick="window.location.href='https://educationsimplified.github.io/universe'">
-            Click Here For Notes
+            Study Material
         </button>
         <br>
 
