--- a/index.html
+++ b/index.html
@@ -310,5 +310,9 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script defer src="https://static.getbutton.io/widget/bundle.js?id=U3DId" ></script>
+
+    <!-- Elfsight Visitor Counter | Untitled Visitor Counter -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-2e424e7b-fede-4bac-9ef6-c419d0320db1" data-elfsight-app-lazy></div>
 </body>
 </html>
