--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
         
 
            <!-- YouTube Notification -->
-
+<button class="bg-blue-500 text-white py-3 px-6 rounded-full hover:bg-blue-600 transition-all shadow-lg" onclick="window.location.href='journalismwallah.html'">
+        NEW WEBSITE UPDATED
+        </button>
     
         <button class="bg-blue-500 text-white py-3 px-6 rounded-full hover:bg-blue-600 transition-all shadow-lg" onclick="window.location.href='https://educationsimplified.github.io/universe'">
             Study Material
