--- a/about.html
+++ b/about.html
@@ -1,159 +1,190 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Uzair Ahmed</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        // Tailwind configuration for dark mode and custom colors
+        tailwind.config = {
+            darkMode: 'class', // Enable dark mode with 'class' strategy
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#00e1ff', // Your custom primary color (light blue/cyan)
+                        secondary: '#0032e6', // Your custom secondary color (darker blue)
+                        darkBg: '#121212', // Dark mode background
+                        darkCard: '#1a1a1a', // Dark mode card background
+                        lightBg: '#f0f2f5', // Light mode background
+                        lightCard: '#ffffff', // Light mode card background
+                        // Re-adding explicit text colors for clarity with buttons
+                        lightTextPrimary: '#1a202c', // Dark text for light mode (used for main headings)
+                        darkTextPrimary: '#f8fafc', // Light text for dark mode (used for main headings)
+                    },
+                    keyframes: {
+                        spin: {
+                            '0%': { transform: 'rotate(0deg)' },
+                            '100%': { transform: 'rotate(-360deg)' },
+                        }
+                    },
+                    animation: {
+                        spin: 'spin 1s linear infinite alternate',
+                    }
+                }
+            }
+        }
+    </script>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: url('https://img.freepik.com/free-photo/rendering-abstract-futuristic-background-with-glowing-neon-blue-orange-lights_181624-19807.jpg');
-            background-size: cover;
-            background-position: center;
-            color: #ffffff;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .header {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .header img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            transition: transform 0.6s ease;
+        /* Custom styles for the theme toggle icon */
+        .theme-toggle-button {
             cursor: pointer;
+            transition: transform 0.3s ease-in-out;
+        }
+        .theme-toggle-button:hover {
+            transform: scale(1.1);
         }
 
-        .header img:hover {
+        /* Ensure the logo spin animation works */
+        .logo-spin-hover:hover {
             animation: spin 1s linear infinite alternate;
         }
 
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(-360deg); }
-        }
-
-        .content {
+        /* Custom button styling for footer links */
+        .footer-button {
+            display: inline-block;
+            padding: 0.75rem 1.5rem; /* py-3 px-6 */
+            border-radius: 0.5rem; /* rounded-lg */
+            font-weight: 600; /* font-semibold */
             text-align: center;
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.6);
-            border-radius: 10px;
-            max-width: 90%;
-            margin: 20px auto;
+            white-space: nowrap; /* Prevent text wrapping */
+            transition: all 0.3s ease-in-out;
+            border: 2px solid; /* For outline effect */
+            text-decoration: none !important; /* Override default link underline */
+            /* Ensure buttons take full width of their container on smaller screens if desired, or limit their max-width */
+            max-width: 100%; /* Ensure they don't overflow on tiny screens */
         }
 
-        .content h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
+        /* Light mode button styles */
+        .light .footer-button {
+            background-color: transparent;
+            color: #1a202c; /* Dark text for light background */
+            border-color: #a0aec0; /* Gray border */
+        }
+        .light .footer-button:hover {
+            background-color: #edf2f7; /* Light gray hover */
+            border-color: #4a5568; /* Darker gray hover border */
+            color: #1a202c;
+            transform: translateY(-2px); /* Slight lift */
         }
 
-        .profile-img {
-            width: 200px;
-            height: 200px;
-            border-radius: 10px;
-            border: 5px solid #ffffff;
-            margin-bottom: 20px;
-            object-fit: cover;
+        /* Dark mode button styles */
+        .dark .footer-button {
+            background-color: transparent;
+            color: #00e1ff; /* Primary color text */
+            border-color: #00e1ff; /* Primary color border */
         }
-
-        .cards {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
-        }
-
-        .card {
-            background-color: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
-        }
-
-        .footer {
-            margin-top: 40px;
-            text-align: left;
-            font-size: 0.9em;
-        }
-
-        .footer a {
-            color: #00e6e6;
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 768px) {
-            .cards {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .profile-img {
-                width: 150px;
-                height: 150px;
-            }
-
-            .header img {
-                width: 120px;
-                height: 120px;
-            }
+        .dark .footer-button:hover {
+            background-color: #00e1ff; /* Primary color background on hover */
+            color: #1a1a1a; /* Dark text on primary background */
+            border-color: #00e1ff;
+            transform: translateY(-2px); /* Slight lift */
         }
     </style>
 </head>
-<body>
-    <!-- Logo Section -->
-    <div class="header" onclick="spinLogoAndRedirect()">
-        <img src="UZAIR B2B.jpg" alt="UZAIR B2B.jpg">
+<body class="min-h-screen flex flex-col bg-lightBg text-gray-900 transition-colors duration-300 dark:bg-darkBg dark:text-white">
+
+    <nav class="bg-darkBg p-4 shadow-lg border-b-2 border-primary dark:bg-darkBg dark:border-primary">
+        <div class="container mx-auto flex justify-between items-center">
+            <a class="text-white text-2xl font-bold tracking-wide transition-colors duration-300 hover:text-primary" href="https://educationsimplified.github.io/mgkvp/index.html">JOURNALISM & MASS COMMUNICATION</a>
+            <button id="themeToggle" class="theme-toggle-button text-white text-2xl focus:outline-none">
+                ☀️
+            </button>
+        </div>
+    </nav>
+
+    <div class="container mx-auto mt-6 px-4">
+        <nav aria-label="breadcrumb">
+            <ol class="flex space-x-2 text-gray-600 dark:text-gray-300">
+                <li class="breadcrumb-item"><a href="index.html" class="text-blue-600 hover:underline dark:text-blue-400">Home</a></li>
+                <li class="breadcrumb-item active text-primary font-semibold" aria-current="page">About Me</li>
+            </ol>
+        </nav>
     </div>
 
-    <!-- Main Content -->
-    <div class="content">
-        <h1>About Uzair Ahmed</h1>
-        <img class="profile-img" src="Uzair2.jpg" alt="Uzair Ahmed">
-        <p>Hello! My name is Uzair Ahmed, a B.A. (Hons) Mass Communication student from the 2022-2025 batch. I am a passionate front-end web developer and have built a dedicated notes website for MGKVP students. In addition to my development skills, I am a professional video editor and graphic designer. As an educator in web development, I aim to help others learn and grow in this field.</p>
-        <p>This website is designed to be a valuable resource, especially for journalism students, but also for students from all streams. Here, you can not only study but also explore job opportunities. Whether you're preparing for competitive exams like CAT, IIMC, UPSC, or simply seeking new learning tools, this platform has something for you. I like to think of it as the "Google" of education and job applications, particularly for students in Varanasi, especially those at MGKVP. However, it's open to all students from different colleges and schools, so feel free to explore and benefit from it!!!</p>
-
-        <h2>Benefit of Choosing Us?</h2>
-        <div class="cards">
-            <div class="card" onclick="showContent1()">Free Job / Internship Portal</div>
-            <div class="card" onclick="showContent2()">Free Study Material</div>
-            <div class="card" onclick="showContent3()">24/7 User Support</div>
+    <div class="flex justify-center mt-8">
+        <img src="20250125_115304.png" alt="UZAIR B2B Logo" class="w-36 h-36 rounded-full border-4 border-primary shadow-xl transition-all duration-500 cursor-pointer logo-spin-hover" onclick="spinLogoAndRedirect()">
         </div>
 
-        <div class="footer">
-            <ul style="list-style: none; padding-left: 0;">
-                <li><a href="https://techogies.com/" target="_blank">MY CURRENT STATUS: EDUCATOR & FOUNDING MEMBER</a></li>
-                <li><a href="https://educationsimplified.github.io/UzairAhmed/" target="_blank">MY RESUME</a></li>
-                <li><a href="https://wa.link/4jrun4" target="_blank">CLICK HERE TO CONTACT ME FOR WEB DEVELOPMENT OR DIGITAL MARKETING SERVICES</a></li>
-            </ul>
-            <p>Developed by Uzair Ahmed, &copy; 2024, Education Simplified</p>
+    <div class="content flex flex-col items-center text-center p-6 bg-lightCard rounded-xl shadow-xl max-w-4xl mx-auto my-8 transition-colors duration-300 dark:bg-darkCard">
+        <h1 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white">About Uzair Ahmed</h1>
+        <img class="profile-img w-56 h-56 rounded-xl border-5 border-primary mb-6 object-cover shadow-lg" src="Uzair2.jpg" alt="Uzair Ahmed Profile">
+        <p class="text-lg mb-4 text-gray-700 dark:text-gray-300 leading-relaxed">Hello! My name is Uzair Ahmed, a B.A. (Hons) Mass Communication student from the 2022-2025 batch. I am a passionate front-end web developer and have built a dedicated notes website for MGKVP students. In addition to my development skills, I am a professional video editor and graphic designer. As an educator in web development, I aim to help others learn and grow in this field.</p>
+        <p class="text-lg mb-8 text-gray-700 dark:text-gray-300 leading-relaxed">This website is designed to be a valuable resource, especially for journalism students, but also for students from all streams. Here, you can not only study but also explore job opportunities. Whether you're preparing for competitive exams like CAT, IIMC, UPSC, or simply seeking new learning tools, this platform has something for you. I like to think of it as the "Google" of education and job applications, particularly for students in Varanasi, especially those at MGKVP. However, it's open to all students from different colleges and schools, so feel free to explore and benefit from it!!!</p>
+
+        <h2 class="text-3xl font-bold mb-6 text-gray-900 dark:text-white">Benefit of Choosing Us?</h2>
+        <div class="cards grid grid-cols-1 md:grid-cols-3 gap-6 w-full max-w-2xl">
+            <div class="card bg-gray-100 p-6 rounded-xl shadow-md cursor-pointer transition-all duration-300 hover:scale-105 hover:shadow-lg dark:bg-darkCard dark:text-white dark:border dark:border-primary" onclick="showContent1()">Free Job / Internship Portal</div>
+            <div class="card bg-gray-100 p-6 rounded-xl shadow-md cursor-pointer transition-all duration-300 hover:scale-105 hover:shadow-lg dark:bg-darkCard dark:text-white dark:border dark:border-primary" onclick="showContent2()">Free Study Material</div>
+            <div class="card bg-gray-100 p-6 rounded-xl shadow-md cursor-pointer transition-all duration-300 hover:scale-105 hover:shadow-lg dark:bg-darkCard dark:text-white dark:border dark:border-primary" onclick="showContent3()">24/7 User Support</div>
         </div>
     </div>
+
+    <div class="new-section-container bg-lightBg mx-auto my-8 p-6 rounded-xl shadow-lg max-w-4xl transition-colors duration-300 dark:bg-darkBg">
+        <h3 class="text-2xl font-bold text-center mb-6 text-gray-900 dark:text-white">Connect with Uzair</h3>
+        <div class="flex flex-col justify-center items-center gap-4">
+            <a href="https://techogies.com/" target="_blank" class="footer-button">MY CURRENT STATUS: EDUCATOR & FOUNDING MEMBER</a>
+            <a href="https://educationsimplified.github.io/UzairAhmed/" target="_blank" class="footer-button">MY RESUME</a>
+            <a href="https://wa.link/4jrun4" target="_blank" class="footer-button">CLICK HERE TO CONTACT ME FOR WEB DEVELOPMENT OR DIGITAL MARKETING SERVICES</a>
+        </div>
+    </div>
+
+    <footer id="footer" class="bg-darkBg py-6 text-center text-gray-300 mt-12 dark:bg-darkBg dark:text-gray-400">
+        <div class="container mx-auto px-4">
+            <div class="text-sm">
+                <p>&copy; <span>Copyright</span> <strong class="px-1 text-primary">Uzair Ahmed B.A.(hons) Student, MGKVP</strong> <span>All Rights Reserved</span></p>
+            </div>
+            <div class="mt-2 text-xs">
+                Designed by <a href="https://uzairb2b.blogspot.com/" class="text-primary hover:underline">Uzair Ahmed</a> Distributed by <a href="https://www.instagram.com/uzairvibes" class="text-primary hover:underline">Uzair B2B Services</a>
+            </div>
+        </div>
+    </footer>
 
     <script>
+        // Theme Toggle functionality
+        const themeToggle = document.getElementById('themeToggle');
+        const htmlTag = document.documentElement;
+
+        // Set initial theme based on localStorage or default to light
+        const currentTheme = localStorage.getItem('theme');
+        if (currentTheme) {
+            htmlTag.classList.remove('light', 'dark');
+            htmlTag.classList.add(currentTheme);
+            themeToggle.textContent = currentTheme === 'dark' ? '☀️' : '🌙';
+        } else {
+            htmlTag.classList.add('light'); // Default to light theme
+            themeToggle.textContent = '🌙';
+        }
+
+        themeToggle.addEventListener('click', () => {
+            if (htmlTag.classList.contains('light')) {
+                htmlTag.classList.remove('light');
+                htmlTag.classList.add('dark');
+                localStorage.setItem('theme', 'dark');
+                themeToggle.textContent = '☀️';
+            } else {
+                htmlTag.classList.remove('dark');
+                htmlTag.classList.add('light');
+                localStorage.setItem('theme', 'light');
+                themeToggle.textContent = '🌙';
+            }
+        });
+
+        // Original JavaScript functions
         function spinLogoAndRedirect() {
-            var logo = document.querySelector('.header img');
-            logo.style.transform = 'rotate(-360deg)';
             setTimeout(function() {
                 window.location.href = 'https://educationsimplified.github.io/india/';
-            }, 600);
+            }, 300); // Shorter delay for a snappier feel
         }
 
         function showContent1() {
